# project3d

./: .gitignore  CMakeLists.txt
assets/: box.mesh  cube.mesh  cube_inverted.mesh  cylinder.mesh  main.frag  main.vert  monkey.mesh  plane.mesh  pyramid.mesh  sphere.mesh  teapot.mesh  test.mesh  text.mesh  torus.mesh
src/: app.cpp  app.hpp  appwindow.cpp  appwindow.hpp  camera.cpp  camera.hpp  common.hpp  debug.hpp  geometry.hpp  main.cpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shaders.cpp  shaders.hpp  textures.cpp  textures.hpp
